@@ -7,7 +7,7 @@ Jan Martínek (Johny) <honza@uf.fyz.fce.vutbr.cz>
   for help with testing on non-GNU/Linux platforms
 
 Михаил Шигорин <mike@osdn.org.ua>
-  for the initial impulse to add Ukrainian and Belarussian support,
+  for the initial impulse to add Ukrainian and Belarusian support,
   and invaluable help during its implementation
 
 Александр Боковой <a.bokovoy@sam-solutions.net>
