@@ -2,7 +2,7 @@
 textdir=/none/tmp/texts
 maps=maps
 letters=letters
-subdirs="belarussian bulgarian russian ukrainian"
+subdirs="belarusian bulgarian russian ukrainian"
 
 dir="$1"
 test -n "$dir" || dir="$subdirs"
@@ -12,7 +12,7 @@ for d in $dir; do
   echo '[ '$d / $c' ]'
   cat $textdir/$d/* | ./countpair $letters/$c.letters \
     >$d/paircounts.$c
-  if test "$d" = "belarussian"; then
+  if test "$d" = "belarusian"; then
     c2=ibm866
     echo '[ '$d / $c2' ]'
     cat $textdir/$d/* | ./xlt $maps/$c.map $maps/$c2-bad.map \
