@@ -668,7 +668,7 @@ with supported 8bit encodings).
 .TS
 tab (@);
 l l.
-Belarussian@CP1251 IBM866 ISO\-8859\-5 KOI8\-UNI maccyr IBM855
+Belarusian @CP1251 IBM866 ISO\-8859\-5 KOI8\-UNI maccyr IBM855
 Bulgarian  @CP1251 ISO\-8859\-5 IBM855 maccyr ECMA\-113
 Czech      @ISO\-8859\-2 CP1250 IBM852 KEYBCS2 macce KOI\-8_CS_2 CORK
 Estonian   @ISO\-8859\-4 CP1257 IBM775 ISO\-8859\-13 macce baltic
@@ -692,7 +692,7 @@ You can also use locale names instead of languages:
 .TS
 tab (@);
 l l.
-Belarussian  @be
+Belarusian   @be
 Bulgarian    @bg
 Czech        @cs
 Estonian     @et
